# Gestion_Stock

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  stock.glade.bak  stock.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  file.c  file.h  interface.c  interface.h.bak  main.c  stock
